--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "expo": "~49.0.15",
+    "expo-print": "~12.4.2",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-error-boundary": "^4.0.12",
     "react-native": "0.72.6",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.19.6",
     "react-redux": "^9.0.4",
-    "redux-logger": "^3.0.6",
-    "expo-print": "~12.4.2"
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
